@@ -1273,6 +1273,9 @@
 		<a href="#about-replaceweaponsprite">replace weapon sprite (handle, num, palette)</a><br>
 		
 	
+		<a href="#about-resetgame">reset game</a><br>
+		
+	
 		<a href="#about-resetmapstate">reset map state (whichdata)</a><br>
 		
 	
@@ -3034,7 +3037,15 @@ resume box advance # go back to normal</pre>
 		<p>
 		<tt>
 		<b><font color="yellow">game over</font></b><br>
-			Resets the game and returns you to the title screen. This command is most useful for after-you-win-the-game type scripts, and for death-scripts that are triggered when you lose in battle.<br>
+			Resets the game and returns you to the title screen. This command is most useful for after-you-win-the-game type scripts, and for death-scripts that are triggered when you lose in battle. This command is subtly different from <a href="#about-resetgame" class="ref">reset game</a> in that if the title screen and load screen have been disabled, it will completely exit the game, taking you back to the game select screen, or exiting to the operating system.<br>
+			
+			
+		</tt></p>
+		<a name="about-resetgame"></a>
+		<p>
+		<tt>
+		<b><font color="yellow">reset game</font></b><br>
+			Resets the game and returns you to the title screen. This is subtly different from <a href="#about-gameover" class="ref">game over</a> in that it will not exit the program if the title screen and load screen have been disabled. it always resets the game back to the beginning.<br>
 			
 			
 		</tt></p>
@@ -9021,7 +9032,7 @@ end</pre>
 			</tt></p>
 
 		<hr>
-	<p>Stats: There are 655 commands in this file, of which 53 are only references to other commands.</p>
+	<p>Stats: There are 656 commands in this file, of which 53 are only references to other commands.</p>
 <p>This file was generated from an XML file. The contents were painstakingly transcribed by Mike Caron from the original Plotscripting Dictionary, which was created by James Paige.</p>
 </body>
 </html>
